@@ -35,8 +35,9 @@ import org.ehcache.spi.persistence.StateHolder;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
+import org.terracotta.common.struct.Measure;
+import org.terracotta.common.struct.MemoryUnit;
 import org.terracotta.offheapresource.OffHeapResourcesProvider;
-import org.terracotta.offheapresource.config.MemoryUnit;
 import org.terracotta.passthrough.PassthroughClusterControl;
 import org.terracotta.passthrough.PassthroughTestHelpers;
 
@@ -44,9 +45,10 @@ import java.io.Serializable;
 import java.lang.reflect.Field;
 import java.net.URI;
 import java.util.Arrays;
+import java.util.List;
 
+import static java.util.Collections.singletonMap;
 import static org.ehcache.clustered.client.config.builders.ClusteredResourcePoolBuilder.clusteredDedicated;
-import static org.ehcache.clustered.client.internal.UnitTestConnectionService.getOffheapResourcesType;
 import static org.ehcache.config.Eviction.noAdvice;
 import static org.ehcache.config.builders.ExpiryPolicyBuilder.noExpiration;
 import static org.ehcache.config.builders.ResourcePoolsBuilder.newResourcePoolsBuilder;
@@ -74,7 +76,7 @@ public class StateRepositoryWhitelistingTest {
         server.registerClientEntityService(new ClusterTierClientEntityService());
         server.registerServerEntityService(new VoltronReadWriteLockServerEntityService());
         server.registerClientEntityService(new VoltronReadWriteLockEntityClientService());
-        server.registerExtendedConfiguration(new OffHeapResourcesProvider(getOffheapResourcesType("test", 32, MemoryUnit.MB)));
+        server.registerExtendedConfiguration(new OffHeapResourcesProvider(singletonMap("test", Measure.of(32, MemoryUnit.MB))));
 
         UnitTestConnectionService.addServerToStripe(STRIPENAME, server);
       }
@@ -160,11 +162,11 @@ public class StateRepositoryWhitelistingTest {
   public void testWhitelistingForPrimitiveClass() throws Exception {
     // No whitelisting for primitive classes are required as we do not deserialize them at client side
     StateHolder<Integer, Integer> testMap = stateRepository.getPersistentStateHolder("testMap", Integer.class, Integer.class,
-      Arrays.asList(Child.class)::contains, null);
+      List.of(Child.class)::contains, null);
 
-    testMap.putIfAbsent(new Integer(10), new Integer(20));
+    testMap.putIfAbsent(10, 20);
 
-    assertThat(testMap.get(new Integer(10)), is(new Integer(20)));
+    assertThat(testMap.get(10), is(20));
     assertThat(testMap.entrySet(), hasSize(1));
   }
 
