@@ -43,7 +43,7 @@ public class PutFieldTest {
     s.init(new TransientStateRepository());
 
     ClassLoader loaderA = createClassNameRewritingLoader(Foo_A.class);
-    Serializable a = (Serializable) loaderA.loadClass(newClassName(Foo_A.class)).newInstance();
+    Serializable a = (Serializable) loaderA.loadClass(newClassName(Foo_A.class)).getDeclaredConstructor().newInstance();
     ByteBuffer encodedA = s.serialize(a);
 
     pushTccl(Foo.class.getClassLoader());
@@ -70,7 +70,7 @@ public class PutFieldTest {
     s.init(new TransientStateRepository());
 
     ClassLoader loaderA = createClassNameRewritingLoader(Bar_A.class);
-    Serializable a = (Serializable) loaderA.loadClass(newClassName(Bar_A.class)).newInstance();
+    Serializable a = (Serializable) loaderA.loadClass(newClassName(Bar_A.class)).getDeclaredConstructor().newInstance();
     ByteBuffer encodedA = s.serialize(a);
 
     pushTccl(Bar.class.getClassLoader());
